--- a/public/index.html
+++ b/public/index.html
@@ -6,31 +6,32 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+  <meta name="description" content="David Lopera Londoño - Full Stack Developer Portfolio" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <title>S0umyajit | Portfolio</title>
-  <meta name="description" content="Self Developed personal website build with React.js">
+  <title>David Lopera Londoño - Full Stack Developer</title>
+  <meta name="description" content="Systems Engineering student at EAFIT with expertise in React, Django, Vue.js, and automation solutions.">
 
   <!-- Google / Search Engine Tags -->
-  <meta itemprop="name" content="S0umyajit | Portfolio">
-  <meta itemprop="description" content="Self Developed personal website build with React.js">
+  <meta itemprop="name" content="David Lopera Londoño - Full Stack Developer">
+  <meta itemprop="description" content="Systems Engineering student at EAFIT with expertise in React, Django, Vue.js, and automation solutions.">
   <meta itemprop="image"
-    content="https://raw.githubusercontent.com/soumyajit4419/Portfolio/master/Images/readme-img.png?token=AK7VCIF5RYEUZZAURELPTAC76U6AK">
+    content="https://raw.githubusercontent.com/davidlopera/Dalolito.github.io/main/Images/readme-img.png">
 
   <!-- Facebook Meta Tags -->
-  <meta property="og:url" content="https://soumyajit.vercel.app">
+  <meta property="og:url" content="https://davidlopera.github.io">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="S0umyajit | Portfolio">
-  <meta property="og:description" content="Self Developed personal website build with React.js">
+  <meta property="og:title" content="David Lopera Londoño - Full Stack Developer">
+  <meta property="og:description" content="Systems Engineering student at EAFIT with expertise in React, Django, Vue.js, and automation solutions.">
   <meta property="og:image"
-    content="https://raw.githubusercontent.com/soumyajit4419/Portfolio/master/Images/readme-img.png?token=AK7VCIF5RYEUZZAURELPTAC76U6AK">
+    content="https://raw.githubusercontent.com/davidlopera/Dalolito.github.io/main/Images/readme-img.png">
 
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="S0umyajit | Portfolio">
-  <meta name="twitter:description" content="Self Developed personal website build with React.js">
+  <meta name="twitter:site" content="@davidlopera">
+  <meta name="twitter:title" content="David Lopera Londoño - Full Stack Developer">
+  <meta name="twitter:description" content="Systems Engineering student at EAFIT with expertise in React, Django, Vue.js, and automation solutions.">
   <meta name="twitter:image"
-    content="https://raw.githubusercontent.com/soumyajit4419/Portfolio/master/Images/readme-img.png?token=AK7VCIF5RYEUZZAURELPTAC76U6AK">
+    content="https://raw.githubusercontent.com/davidlopera/Dalolito.github.io/main/Images/readme-img.png">
 </head>
 
 <body>
